--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -7,6 +7,31 @@
     state: present
     flatpakrepo_url: https://dl.flathub.org/repo/flathub.flatpakrepo
     method: user
+- name: Printer configuratie blok
+  block:
+    - name: Check of printer 'HP_M406_School' al bestaat
+      ansible.builtin.command: lpstat -p HP_M406_School
+      register: printer_check
+      failed_when: false
+      changed_when: false
+
+    - name: Voeg netwerkprinter toe (Driverless IPP)
+      ansible.builtin.command: >
+        lpadmin -p HP_M406_School
+        -E
+        -v ipp://prg00601/ipp/print
+        -m everywhere
+        -L "Schoolgebouw Gang"
+      when: printer_check.rc != 0
+      # -p: Naam van de printer
+      # -E: Enable (zet hem aan)
+      # -v: De URL (gebruik hostname of IP)
+      # -m everywhere: De magische 'driverless' mode
+      # -L: Locatie omschrijving
+
+    - name: Stel in als standaardprinter (optioneel)
+      ansible.builtin.command: lpadmin -d HP_M406_School
+      when: printer_check.rc != 0
 - name: Zorg dat Firefox (user) geïnstalleerd is
   community.general.flatpak:
     name: org.mozilla.firefox
