--- a/playbooks/lln.yml
+++ b/playbooks/lln.yml
@@ -18,10 +18,13 @@
 #   community.general.dconf:
 #     key: "/org/gnome/desktop/background/picture-uri"
 #     value: "'file:///usr/share/backgrounds/coolbx/archi.png'"
+
 - name: Zet window menubar layout
   community.general.dconf:
     key: "/org/gnome/desktop/wm/preferences/button-layout"
-    value: "'appmenu:maximize,close'"
+    # value: "'appmenu:maximize,close'"
+    value: "'appmenu:minimize,maximize,close'"
+
 - name: Wallpaper setup
   block:
     # 1. Maak een mapje voor de achtergronden (in de user home)
@@ -35,8 +38,8 @@
     - name: Download de wallpaper van Unsplash
       ansible.builtin.get_url:
         # Jouw Unsplash link:
-        url: "https://unsplash.com/photos/dKJXkKCF2D8/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc1MjA3fA&force=true&w=2400"
-        # url: "https://unsplash.com/photos/3l3RwQdHRHg/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc0MDQ0fA&force=true&w=2400"
+        # url: "https://unsplash.com/photos/dKJXkKCF2D8/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc1MjA3fA&force=true&w=2400"
+        url: "https://unsplash.com/photos/3l3RwQdHRHg/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc0MDQ0fA&force=true&w=2400"
         # We slaan het op met een vaste naam.
         # Als je de URL hierboven verandert, overschrijft Ansible dit bestand.
         dest: "{{ lookup('env', 'HOME') }}/.local/share/backgrounds/current_wallpaper.jpg"
