--- a/playbooks/lln.yml
+++ b/playbooks/lln.yml
@@ -39,7 +39,8 @@
       ansible.builtin.get_url:
         # Jouw Unsplash link:
         # url: "https://unsplash.com/photos/dKJXkKCF2D8/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc1MjA3fA&force=true&w=2400"
-        url: "https://unsplash.com/photos/3l3RwQdHRHg/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc0MDQ0fA&force=true&w=2400"
+        # url: "https://unsplash.com/photos/3l3RwQdHRHg/download?ixid=M3wxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNzYzNDc0MDQ0fA&force=true&w=2400"
+        url: "https://unsplash.com/photos/4fvS9uU1Reo/download?ixid=M3wxMjA3fDB8MXxzZWFyY2h8M3x8bGl2ZSUyMHdhbGxwYXBlcnN8ZW58MHx8fHwxNzYzNDcyMTc0fDA&force=true&w=1920"
         # We slaan het op met een vaste naam.
         # Als je de URL hierboven verandert, overschrijft Ansible dit bestand.
         dest: "{{ lookup('env', 'HOME') }}/.local/share/backgrounds/current_wallpaper.jpg"
